ajuste para token
